# ChangeLog for dev-games/vamos
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-games/vamos/ChangeLog,v 1.12 2010/06/30 03:19:54 mr_bones_ Exp $

  30 Jun 2010; Michael Sterrett <mr_bones_@gentoo.org> vamos-0.6.2.ebuild,
  files/vamos-0.6.2-as-needed.patch:
  fixup deps as report by Sam Varner via email

  03 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> vamos-0.6.2.ebuild:
  x86 stable wrt bug #303503

*vamos-0.6.2 (12 Oct 2009)

  12 Oct 2009; Michael Sterrett <mr_bones_@gentoo.org> -vamos-0.6.0.ebuild,
  -files/vamos-0.6.0-as-needed.patch, -files/vamos-0.6.0-gcc43.patch,
  +vamos-0.6.2.ebuild, +files/vamos-0.6.2-as-needed.patch:
  version bump; clean old

  12 Feb 2009; Tupone Alfredo <tupone@gentoo.org>
  +files/vamos-0.5.5-as-needed.patch, +files/vamos-0.6.0-as-needed.patch,
  vamos-0.5.5.ebuild, vamos-0.6.0.ebuild:
  Fix --as-needed bug #250072 by flameeyes@gentoo.org

  19 Aug 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +files/vamos-0.6.0-gcc43.patch, vamos-0.6.0.ebuild:
  add gcc43 patch submitted by Dannee McGuire (bug #227511)

*vamos-0.6.0 (24 Feb 2008)

  24 Feb 2008; Michael Sterrett <mr_bones_@gentoo.org> +vamos-0.6.0.ebuild:
  version bump

  21 Jan 2008; Tristan Heaven <nyhm@gentoo.org> vamos-0.5.7.ebuild:
  Add sdl-ttf dep, bug #206131

*vamos-0.5.7 (21 Jul 2007)

  21 Jul 2007; Tristan Heaven <nyhm@gentoo.org> +vamos-0.5.7.ebuild:
  Version bump

  10 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> vamos-0.5.5.ebuild:
  Added modular X dependencies and closing bug #121355.

*vamos-0.5.5 (31 Oct 2005)

  31 Oct 2005; Michael Sterrett <mr_bones_@gentoo.org> +vamos-0.5.5.ebuild:
  version bump

  29 Aug 2005; Michael Sterrett <mr_bones_@gentoo.org> vamos-0.5.4.ebuild:
  stable for x86

*vamos-0.5.4 (04 Jul 2005)

  04 Jul 2005; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.