@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/vamos/vamos-0.6.2.ebuild,v 1.3 2010/06/30 03:19:54 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-games/vamos/vamos-0.6.2.ebuild,v 1.4 2010/06/30 03:33:46 mr_bones_ Exp $
 
 EAPI=2
 inherit eutils
@@ -12,7 +12,7 @@ SRC_URI="mirror://sourceforge/vamos/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 x86"
-IUSE=""
+IUSE="static-libs"
 
 RDEPEND="virtual/opengl
 	virtual/glu
@@ -31,7 +31,8 @@ src_prepare() {
 src_configure() {
 	econf \
 		--disable-dependency-tracking \
-		--disable-unit-tests
+		--disable-unit-tests \
+		$(use_enable static-libs static)
 }
 
 src_install() {
@@ -39,4 +40,8 @@ src_install() {
 	dobin caelum/.libs/caelum || die "dobin failed"
 	newdoc caelum/README README.caelum
 	dodoc AUTHORS ChangeLog README TODO
+	if ! use static-libs ; then
+		find "${D}" -type f -name '*.la' -exec rm {} + \
+			|| die "la removal failed"
+	fi
 }
