@@ -1,6 +1,9 @@
 # ChangeLog for dev-games/vamos
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-games/vamos/ChangeLog,v 1.12 2010/06/30 03:19:54 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-games/vamos/ChangeLog,v 1.13 2010/06/30 03:33:46 mr_bones_ Exp $
+
+  30 Jun 2010; Michael Sterrett <mr_bones_@gentoo.org> vamos-0.6.2.ebuild:
+  add USE=static-libs support
 
   30 Jun 2010; Michael Sterrett <mr_bones_@gentoo.org> vamos-0.6.2.ebuild,
   files/vamos-0.6.2-as-needed.patch:
